k8s/ecollect/ecollect-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ecollect-svc
  labels:
    app: ecollect
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8880
      nodePort: 30088
  selector:
    app: ecollect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecollect
spec:
  selector:
    matchLabels:
      app: ecollect
  replicas: 1
  template:
    metadata:
      labels:
        app: ecollect
    spec:
      containers:
      - name: uploads-container
        image: 52.117.54.217:5000/ecollect:test
        ports:
          - containerPort: 8880
