k8s/ecollect/ecollectapis-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ecollectapis-svc
spec:
  selector:
    app: ecollectapis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30010
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecollectapis
  labels:
    app: ecollectapis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecollectapis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ecollectapis
    spec:
      containers:
      - name: ecollectapis
        image: 52.117.54.217:5000/ecollect_apis:2.0.0
        ports:
        - containerPort: 8000
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "500m"
