k8s/ecollect/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: 52.117.54.217:5000/apps/testapp
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: testapp-service
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ecollect.inteligen.co.ke
    http:
      paths:
      - path: /testapp
        backend:
          serviceName: testapp-service
          servicePort: 3000
