k8s/ecollect/ecollect-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecollect-ingress
  annotations:
    ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/kibana/(.*)$ /$1 break;
      proxy_set_header Authorization "";
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ecollect.inteligen.co.ke
    http:
      paths:
      - path: /
        backend:
          serviceName: ecollect-svc
          servicePort: 80
      - path: /nginx
        backend:
          serviceName: nginx-svc
          servicePort: 80
      - path: /api
        backend:
          serviceName: ecollectapis-svc
          servicePort: 80
      - path: /nodeapi
        backend:
          serviceName: oracledbnode-service
          servicePort: 80
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: 5601
